--- a/template.yml
+++ b/template.yml
@@ -23,6 +23,11 @@ Resources:
           Properties:
             Path: /
             Method: get
+        GetEvent:
+          Type: Api
+          Properties:
+            Path: /List
+            Method: get
         PostEvent:
           Type: Api
           Properties:
